src/objects/loan__Collateral__c.object
<CustomObject>
    <description>This object is deprecated.</description>
    <fields>
        <fullName>loan__Collateral_Asset_Class__c</fullName>
        <label>Collateral Asset Class</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Old</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Collateral_Asset_Type__c</fullName>
        <label>Collateral Asset Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Policy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Collateral_Description__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Collateral Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>loan__Collateral_Identification_Number__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Collateral Identification Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Collateral_Make__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Collateral_Model__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Collateral_Owner_Occupancy__c</fullName>
        <label>Collateral Owner Occupancy</label>
        <picklist>
            <picklistValues>
                <fullName>Self</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Collateral_Primary_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Collateral Primary Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Collateral_Purchase_Order__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Purchase Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Collateral_Year__c</fullName>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Account__c</fullName>
        <label>Loan Account</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipName>Collaterals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Collateral (Deprecated)</label>
    <nameField>
        <displayFormat>COID-{0000000000}</displayFormat>
        <label>Collateral ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collaterals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>